# Bayti

./: .replit  README.md  env.sample  package-lock.json  package.json  pyproject.toml  replit.md  start_ai_backend.py  start_both_servers.sh
ai_backend/: keep_alive.py  main.py  run_ai_backend.py  run_server.py  simple_server.py  start.py  start_server.py  supervisor.py
attached_assets/: Pasted--You-re-almost-there-call-connects-it-doesn-t-drop-now-let-s-fix-the-AI-loop-so-Bayti-talks-n-1754408882435_1754408882436.txt  Pasted-Got-it-the-browser-console-shows-the-WS-connect-failed-and-closed-with-code-1006-That-almost-always-1754921351288_1754921351289.txt  Pasted-Great-question-let-s-clarify-what-your-UI-dashboard-is-and-whether-using-Replit-alone-is-enough-t-1754337311758_1754337311758.txt  Pasted-Let-s-fix-the-demo-first-it-s-almost-always-a-tiny-WebSocket-setup-issue-If-we-jump-straight-to-pho-1754920199149_1754920199150.txt  Pasted-Yep-what-you-re-seeing-does-make-sense-The-agent-s-report-basically-says-WebSocket-connected-1754923222845_1754923222846.txt  Pasted-You-are-an-expert-Node-TypeScript-engineer-Add-a-minimal-Interactive-realtime-mode-to-this-proj-1754918232748_1754918232748.txt  Pasted-You-are-an-expert-Node-TypeScript-engineer-Add-an-adaptive-humanizer-layer-to-our-realtime-pipeli-1754918971275_1754918971276.txt  Pasted-You-are-an-expert-front-end-engineer-and-SaaS-marketer-Build-a-production-ready-responsive-Prici-1754906897609_1754906897610.txt  (+3 more)
client/: auth.html  index.html  landing.html  pricing.html  solutions.html
server/: elevenlabs.ts  index.ts  (+3 more)
(+52 files in other folders)
